--- a/src/profilePage/ProfilePage.css
+++ b/src/profilePage/ProfilePage.css
@@ -13,6 +13,6 @@
 
 @media (max-width: 768px) {
   .rows-wrap {
-    margin-top: -40px;
+    margin-top: 10px;
   }
 }
